modules/gke/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-client-deployment
spec:
  selector:
    matchLabels:
      app: postgres-client-deployment
  template:
    metadata:
      labels:
        app: postgres-client-deployment
    spec:
      serviceAccountName: cloud-sql-proxy
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: postgres-client-deployment
          image: jbergknoff/postgresql-client
          ports:
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo "Waiting for Cloud SQL Proxy..."
              sleep 5
              echo "Testing connection to PostgreSQL..."
              psql  postgresql://$DB_USER:$DB_PASS@127.0.0.1:5432/$DB_NAME
              sleep infinity
